--- a/summarizing-data-examples.html
+++ b/summarizing-data-examples.html
@@ -487,6 +487,52 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li class="chapter" data-level="11.3" data-path="interpolation-and-extrapolation-examples.html"><a href="interpolation-and-extrapolation-examples.html#example---co2-at-mana-loa-observatory"><i class="fa fa-check"></i><b>11.3</b> Example - CO<sub>2</sub> at Mana Loa Observatory</a></li>
 </ul></li>
+<li class="chapter" data-level="12" data-path="differentiation-integration.html"><a href="differentiation-integration.html"><i class="fa fa-check"></i><b>12</b> Differentiation &amp; Integration</a>
+<ul>
+<li class="chapter" data-level="12.1" data-path="differentiation-integration.html"><a href="differentiation-integration.html#biggest-takeaway---workflow"><i class="fa fa-check"></i><b>12.1</b> Biggest takeaway - workflow</a></li>
+<li class="chapter" data-level="12.2" data-path="differentiation-integration.html"><a href="differentiation-integration.html#reading-3"><i class="fa fa-check"></i><b>12.2</b> Reading</a></li>
+</ul></li>
+<li class="chapter" data-level="13" data-path="week-12---differentiation-integration.html"><a href="week-12---differentiation-integration.html"><i class="fa fa-check"></i><b>13</b> Week 12 - Differentiation &amp; Integration</a>
+<ul>
+<li class="chapter" data-level="13.1" data-path="week-12---differentiation-integration.html"><a href="week-12---differentiation-integration.html#differentiation"><i class="fa fa-check"></i><b>13.1</b> Differentiation</a></li>
+<li class="chapter" data-level="13.2" data-path="week-12---differentiation-integration.html"><a href="week-12---differentiation-integration.html#calculating-derivative-values-from-data"><i class="fa fa-check"></i><b>13.2</b> Calculating derivative values from data</a>
+<ul>
+<li class="chapter" data-level="13.2.1" data-path="week-12---differentiation-integration.html"><a href="week-12---differentiation-integration.html#difference-methods"><i class="fa fa-check"></i><b>13.2.1</b> Difference methods</a></li>
+<li class="chapter" data-level="13.2.2" data-path="week-12---differentiation-integration.html"><a href="week-12---differentiation-integration.html#interpolation-methods"><i class="fa fa-check"></i><b>13.2.2</b> Interpolation methods</a></li>
+</ul></li>
+<li class="chapter" data-level="13.3" data-path="week-12---differentiation-integration.html"><a href="week-12---differentiation-integration.html#integration"><i class="fa fa-check"></i><b>13.3</b> Integration</a></li>
+<li class="chapter" data-level="13.4" data-path="week-12---differentiation-integration.html"><a href="week-12---differentiation-integration.html#objective-calculate-total-annual-sediment-massyear-and-water-volumeyear-for-a-given-year-for-a-specific-station"><i class="fa fa-check"></i><b>13.4</b> Objective: calculate total annual sediment [mass/year] and water [volume/year] for a given year for a specific station</a></li>
+<li class="chapter" data-level="13.5" data-path="week-12---differentiation-integration.html"><a href="week-12---differentiation-integration.html#approach-2"><i class="fa fa-check"></i><b>13.5</b> Approach:</a></li>
+<li class="chapter" data-level="13.6" data-path="week-12---differentiation-integration.html"><a href="week-12---differentiation-integration.html#workflow-3"><i class="fa fa-check"></i><b>13.6</b> Workflow</a></li>
+<li class="chapter" data-level="13.7" data-path="week-12---differentiation-integration.html"><a href="week-12---differentiation-integration.html#apply-case-scenario"><i class="fa fa-check"></i><b>13.7</b> Apply case scenario:</a>
+<ul>
+<li class="chapter" data-level="13.7.1" data-path="week-12---differentiation-integration.html"><a href="week-12---differentiation-integration.html#read-in-sediment-rating-curve-table"><i class="fa fa-check"></i><b>13.7.1</b> Read in sediment rating curve table</a></li>
+<li class="chapter" data-level="13.7.2" data-path="week-12---differentiation-integration.html"><a href="week-12---differentiation-integration.html#station-identification-and-data-retreival"><i class="fa fa-check"></i><b>13.7.2</b> Station Identification and Data Retreival</a></li>
+<li class="chapter" data-level="13.7.3" data-path="week-12---differentiation-integration.html"><a href="week-12---differentiation-integration.html#filter-sediment-table-for-station-of-interest"><i class="fa fa-check"></i><b>13.7.3</b> Filter sediment table for station of interest</a></li>
+<li class="chapter" data-level="13.7.4" data-path="week-12---differentiation-integration.html"><a href="week-12---differentiation-integration.html#calculate-daily-sediment-mass-flux"><i class="fa fa-check"></i><b>13.7.4</b> Calculate Daily sediment mass flux</a></li>
+</ul></li>
+<li class="chapter" data-level="13.8" data-path="week-12---differentiation-integration.html"><a href="week-12---differentiation-integration.html#compare-2011-and-2012-in-case-study"><i class="fa fa-check"></i><b>13.8</b> Compare 2011 and 2012 in case study</a></li>
+</ul></li>
+<li class="chapter" data-level="14" data-path="systems-of-equations.html"><a href="systems-of-equations.html"><i class="fa fa-check"></i><b>14</b> Systems of Equations</a>
+<ul>
+<li class="chapter" data-level="14.1" data-path="systems-of-equations.html"><a href="systems-of-equations.html#this-weeks-prep"><i class="fa fa-check"></i><b>14.1</b> This week’s prep:</a>
+<ul>
+<li class="chapter" data-level="14.1.1" data-path="systems-of-equations.html"><a href="systems-of-equations.html#required-reading"><i class="fa fa-check"></i><b>14.1.1</b> Required reading:</a></li>
+<li class="chapter" data-level="14.1.2" data-path="systems-of-equations.html"><a href="systems-of-equations.html#optional-resources"><i class="fa fa-check"></i><b>14.1.2</b> Optional resources:</a></li>
+</ul></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="systems-of-equations-examples.html"><a href="systems-of-equations-examples.html"><i class="fa fa-check"></i>Systems of Equations Examples</a>
+<ul>
+<li class="chapter" data-level="14.2" data-path="systems-of-equations-examples.html"><a href="systems-of-equations-examples.html#example-1-3"><i class="fa fa-check"></i><b>14.2</b> Example 1</a>
+<ul>
+<li class="chapter" data-level="14.2.1" data-path="systems-of-equations-examples.html"><a href="systems-of-equations-examples.html#simple-matrix-and-solving-for-x"><i class="fa fa-check"></i><b>14.2.1</b> Simple Matrix and solving for X</a></li>
+</ul></li>
+<li class="chapter" data-level="14.3" data-path="systems-of-equations-examples.html"><a href="systems-of-equations-examples.html#example-2-3"><i class="fa fa-check"></i><b>14.3</b> Example 2</a></li>
+<li class="chapter" data-level="14.4" data-path="systems-of-equations-examples.html"><a href="systems-of-equations-examples.html#example-3-problem-11.3-in-chapra"><i class="fa fa-check"></i><b>14.4</b> Example 3 (Problem 11.3 in Chapra)</a>
+<ul>
+<li class="chapter" data-level="14.4.1" data-path="systems-of-equations-examples.html"><a href="systems-of-equations-examples.html#to-find-effect-of-reactor-3-on-reactor-1."><i class="fa fa-check"></i><b>14.4.1</b> To find effect of reactor 3 on reactor 1….</a></li>
+</ul></li>
+</ul></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
 
@@ -673,7 +719,7 @@ This dataset (<code>experiment_info.csv</code>) contains metadata about each run
 <h3><span class="header-section-number">5.8.1</span> Introduction<a href="summarizing-data-examples.html#introduction-1" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>In my research group we study plant genes and how they function. One interesting thing about plants is that their genomes are quite large compared to other organisms and one of the reasons for that is their genomes have been duplicated several times throughout the history of their evolution</p>
 <div class="float">
-<img src="data/Largest-collection-of-garden-gnomes-60at60-photo2_tcm25-386214.webp" alt="gnome duplication" />
+<img src="Data/Largest-collection-of-garden-gnomes-60at60-photo2_tcm25-386214.webp" alt="gnome duplication" />
 <div class="figcaption">gnome duplication</div>
 </div>
 <p>These genome duplications have generated families of genes which have similar but slightly different functions. Often we think about each of these genes in a family as playing a distinct role, and by <strong>adding</strong> together their function we could approximate their total function. However that’s not always the case because these genes might interact with one another—directly through binding or indirectly through competition—to perform their total function. These interactions might cause some deviation from our <strong>additive</strong> model of function; in genetics this is called <strong>epistasis</strong>.</p>
