--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Systems using Numerical Methods.</p>" />
 <meta name="author" content="R. Clay Wright" />
 
 
-<meta name="date" content="2025-04-19" />
+<meta name="date" content="2025-04-28" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -577,28 +577,31 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h1 class="title">Data Analysis and Numerical Methods for Biological Systems Engineers</h1>
 <p class="author"><em>Durelle Scott</em></p>
 <p class="author"><em>R. Clay Wright</em></p>
-<p class="date"><em>2025-04-19</em></p>
+<p class="date"><em>2025-04-28</em></p>
 </div>
 <div id="about-this-book" class="section level1 unnumbered hasAnchor">
 <h1>About this book<a href="index.html#about-this-book" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <p>This book was developed as a companion text for the Virginia Tech Biological Systems Engineering course BSE3144: Engineering Analysis for Biological Systems using Numerical Methods.</p>
-<p>This course focuses on the process of solving engineering problems related to biological systems using numerical analysis including root finding, numerical integration, differentiation, interpolation and numerical solution of ordinary differential equations, error analysis and programming with engineering software.</p>
+<p>This course focuses on the process of solving engineering problems related to biological systems using numerical analysis including root finding, numerical integration and differentiation, interpolation, numerical solution of ordinary differential equations, error analysis and programming with statistical software.</p>
 <p>R is the programming language we will use in this course. We will spend the first portion of this course devoted to learning the basics of structured and modular programming. Although we focus on R, the described techniques are also applicable in any other computer languages. Furthermore, the techniques provide a logical approach to addressing complex problems, breaking them down into manageable (and solvable) pieces.</p>
 <p>The numerical computation techniques included in this course are utilized by many engineers. For biological systems engineers, the applications of the techniques include consideration of characteristics of biological systems, such as natural variability, growth/decay cycles, nonhomogeneity, anisotropy, and process uncertainty.</p>
 <p><strong>Learning Objectives:</strong></p>
 <p>Upon successful completion of this course, the student will be able to:</p>
 <ul>
+<li>Organize, analyze, and communicate data-driven insights using R and Tidyverse principles</li>
+<li>Apply best coding practices for writing clear, efficient, and reproducible code</li>
+<li>Create and interpret data visualizations effectively communicating analytical results</li>
 <li>Apply the following numerical techniques to solve problems in biological systems engineering:
 <ul>
-<li>regression analysis</li>
+<li>regression</li>
 <li>root finding</li>
-<li>solving systems of linear equations</li>
-<li>interpolation</li>
+<li>solution of systems of linear equations</li>
+<li>interpolation and extrapolation</li>
 <li>differentiation and integration</li>
-<li>solving ordinary differential equations</li>
+<li>integration of ordinary differential equations</li>
 </ul></li>
 <li>Define and quantify sources of error in numerical techniques</li>
-<li>Write programs, using engineering software, that involve loops, logical block constructs, function, plotting, and input/output</li>
+<li>Develop professional skills through engagement with different programming languages, command line and integrated development environment tools, and career preparation and development websites</li>
 </ul>
 
 </div>
